Filtro por etiquetas

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <br>
 {%for post in posts%}
     {{post[0]}} <br>   
-    <h2><a href="post/{{post[0]}}"> {{post[3]}}</a></h2>
+    <h2><a href="/post/{{post[0]}}"> {{post[3]}}</a></h2>
     <p>{{post[4]|truncate(100)}} </p>  
     <p>{{post[2]}} - {{post[1]}} <br></p>    
     <hr>
