--- a/templates/post.html
+++ b/templates/post.html
@@ -16,7 +16,7 @@
     </p>
     <p>Etiquetas</p>
     <p>{%for e in etiquetas%} 
-        <a href="">{{e}}</a><br>
+        <a href="/filtro/{{e}}">{{e}}</a><br>
         {%endfor%}
     </p>
     <a href="/">Volver</a>
